button alignment fix

--- a/src/styles/Signup/providerSignup.css
+++ b/src/styles/Signup/providerSignup.css
@@ -17,8 +17,15 @@
     margin-right: 1rem;
   }
   
-  .provider-form > div:nth-child(1), div:nth-child(9), div:nth-child(14) {
+  .provider-form > div:nth-child(1), div:nth-child(9) {
     grid-column: span 2;
+  }
+
+  .provider-form > button {
+    grid-column: span 2;
+    width: 50%;
+    justify-self: center;
+    margin: 2rem;
   }
 }
 .provider-form > div:first-child  {
@@ -32,10 +39,6 @@ label {
   margin-bottom: 0.5rem;
 }
 
-button {
-  justify-content: center;
-  margin: 1rem ;
-}
 
 .terms-label:hover {
   cursor: pointer;
